...
                            <constraint firstAttribute="trailing" secondItem="zKu-Gy-y4d" secondAttribute="trailing" id="Rgl-is-cbH"/>
                            <constraint firstItem="zKu-Gy-y4d" firstAttribute="bottom" secondItem="KlT-bV-QiF" secondAttribute="top" id="Wp2-sH-5rg"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" id="7Ou-xG-I3d">
                        <nil key="title"/>
                        <barButtonItem key="leftBarButtonItem" image="close window" id="Gdi-nJ-fZy">
                            <connections>
                                <action selector="closeAction:" destination="Z29-MB-lIF" id="P1p-ZW-P2j"/>
                            </connections>
                        </barButtonItem>
                        <view key="titleView" contentMode="scaleToFill" id="J1S-fI-crL">
                            <rect key="frame" x="60.5" y="11.5" width="254" height="33"/>
...
            <point key="canvasLocation" x="900" y="2459.765625"/>
        </scene>
        <!--Charts-->
        <scene sceneID="lKW-Tn-wxC">
            <objects>
                <navigationController id="Wqg-S6-mPY" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Charts" image="report card" id="Qf0-Ym-Uaz"/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" translucent="NO" id="QGu-ik-vJB">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                        <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                        <color key="barTintColor" red="0.23137254900000001" green="0.34901960780000002" blue="0.59607843140000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                    </navigationBar>
...
            <point key="canvasLocation" x="900" y="1418.5546875"/>
        </scene>
        <!--Map-->
        <scene sceneID="ohB-Id-D0k">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="01M-8A-n3O" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Map" image="map" id="E5W-ev-oVV"/>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" translucent="NO" id="KDK-NG-rYw">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                        <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                        <color key="barTintColor" red="0.23137254900000001" green="0.34901960780000002" blue="0.59607843140000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
            <point key="canvasLocation" x="-103" y="-449"/>
        </scene>
        <!--Globe-->
        <scene sceneID="d8h-ax-1zE">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="9vS-55-Pu9" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Globe" image="globe" id="wOe-oH-lsJ"/>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" translucent="NO" id="2w1-1k-f5E">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                        <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                        <color key="barTintColor" red="0.23137254900000001" green="0.34901960780000002" blue="0.59607843140000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
