...
    // MARK: Outlets
    @IBOutlet weak var tableView: UITableView!
    
    // MARK: Actions
    @IBAction func cancelAction(_ sender: UIBarButtonItem) {
        let message = "Your view and play counts will not be recorded if you do not login."
        let alertController = UIAlertController(title: "Login Cancelled",
                                                message: message,
                                                preferredStyle: .alert)
        
        alertController.addAction(UIAlertAction(title: "OK",
                                                style: UIAlertAction.Style.default,
                                                handler: {(action) in
            self.dismiss(animated: true,
                         completion: nil)
        }))
        self.present(alertController,
...
                            })
                        }
                    }
                }
            }
            
            let cancelAction = UIAlertAction(title: "Cancel", style: .cancel) { (_) in }
            
            alertController.addTextField { (textField) in
                textField.placeholder = "Name"
            }
            alertController.addTextField { (textField) in
                textField.placeholder = "Email"
...
